alignment bug

--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -39,6 +39,7 @@
   object-fit: contain;
   position: absolute;
   top: -20px;
+  left: 20px;
 
 
 }
